--- a/assets/styles/main_screen/main_screen.scss
+++ b/assets/styles/main_screen/main_screen.scss
@@ -14,11 +14,15 @@
 // Main Screen
 .main_screen {
     width: 100vw;
-    height: 500px;
+    min-height: 500px;
     margin-top: 90px;
 
-    @media (max-width: 500px) {
-        height: 230px;
+    @media (max-width: 1100px) and (min-width: 700px) {
+        margin-top: 0;
+    }
+
+    @media (max-width: 900px) and (min-width: 700px) {
+        margin-top: 50px;
     }
 
     .main_img {
@@ -32,16 +36,24 @@
     }
 
     .breadcrumbs {
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 19.5px;
         color: var(--dark-grey);
         margin-top: 20px;
         display: flex;
         word-spacing: 10px;
         max-width: 100%;
         position: relative;
-        left: 13.5%;
+        align-self: flex-start;
+
+        @media (max-width: 1100px) {
+            margin-top: 0;
+        }
+
+        span {
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 19.5px;
+            word-spacing: 0px;
+        }
 
         @media (max-width: 500px) {
             left: 3%;
