--- a/assets/styles/promotion/promotion.css
+++ b/assets/styles/promotion/promotion.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+/* Акция */
 .main_screen {
   display: grid;
   grid-template-columns: 40% 60%;
@@ -12,10 +14,10 @@
 }
 @media (max-width: 1300px) {
   .main_screen {
-    padding: 0 10px;
+    padding: 0 25px;
   }
 }
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
   .main_screen {
     grid-template-columns: 1fr;
   }
@@ -24,7 +26,7 @@
   display: flex;
   flex-direction: column;
 }
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
   .main_screen .promotion-col {
     align-items: center;
     justify-content: center;
@@ -52,7 +54,7 @@
 .main_screen .promotion-col .promotion__text--caption--adaptive {
   display: none;
 }
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
   .main_screen .promotion-col .promotion__text--caption {
     text-align: center;
     flex-direction: column;
@@ -78,7 +80,7 @@
   display: flex;
   gap: 5px;
 }
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
   .main_screen .promotion-col .promotion__text--desc {
     flex-direction: column;
     text-align: center;
@@ -95,7 +97,7 @@
   gap: 60px;
   margin-top: 150px;
 }
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
   .main_screen .promotion-col .promotion__footer {
     margin-top: 20px;
     flex-direction: column;
@@ -108,7 +110,7 @@
   flex-direction: column;
   text-align: left;
 }
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
   .main_screen .promotion-col .promotion__footer--deadline {
     text-align: center;
   }
@@ -128,7 +130,7 @@
   font-size: 40px;
   line-height: 48.76px;
 }
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
   .main_screen .promotion-col .promotion__footer--deadline_since, .main_screen .promotion-col .promotion__footer--deadline_to {
     justify-content: center;
   }
@@ -139,7 +141,7 @@
   gap: 15px;
   text-align: left;
 }
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
   .main_screen .promotion-col .promotion__footer--timer {
     text-align: center;
     align-items: center;
@@ -181,7 +183,7 @@
   width: 100%;
   height: 500px;
 }
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
   .main_screen .image-col {
     display: none;
   }
@@ -202,18 +204,18 @@
 .main_screen .image-col--image--adaptive {
   display: none;
 }
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
   .main_screen .image-col--image {
     display: none;
   }
 }
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
   .main_screen .image-col--image--adaptive {
     display: block;
     height: 40%;
   }
 }
-@media (max-width: 1100px) and (max-width: 600px) {
+@media (max-width: 1200px) and (max-width: 600px) {
   .main_screen .image-col--image--adaptive {
     position: relative;
     left: 50px;
@@ -221,8 +223,112 @@
     height: 33%;
   }
 }
-@media (max-width: 1100px) and (max-width: 400px) {
+@media (max-width: 1200px) and (max-width: 400px) {
   .main_screen .image-col--image--adaptive {
     width: 170%;
+  }
+}
+
+/* Условия акции */
+.promotion_info {
+  display: grid;
+  grid-template-columns: repeat(3, 30%);
+  padding: 0 200px;
+  color: #000000;
+  margin-top: 50px;
+  margin-bottom: 100px;
+  gap: 20px;
+}
+@media (max-width: 1600px) {
+  .promotion_info {
+    padding: 0 100px;
+  }
+}
+@media (max-width: 1500px) {
+  .promotion_info {
+    padding: 0 10px;
+  }
+}
+@media (max-width: 1350px) {
+  .promotion_info {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 900px) {
+  .promotion_info {
+    grid-template-columns: 1fr;
+  }
+}
+.promotion_info__item {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+@media (max-width: 1350px) and (min-width: 900px) {
+  .promotion_info__item:last-of-type {
+    grid-column: 1/3;
+  }
+}
+@media (max-width: 1350px) {
+  .promotion_info__item {
+    align-items: center;
+  }
+}
+@media (max-width: 450px) {
+  .promotion_info__item {
+    align-items: flex-start;
+    gap: 15px;
+  }
+}
+.promotion_info__item--caption {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 48.76px;
+  text-align: left;
+}
+@media (max-width: 600px) {
+  .promotion_info__item--caption {
+    font-size: 24px;
+    line-height: 29.26px;
+  }
+}
+.promotion_info__item--desc {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.promotion_info__item--desc_text {
+  display: flex;
+  gap: 15px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20.8px;
+  align-items: center;
+  width: 420px;
+  white-space: wrap;
+  text-align: left;
+}
+@media (max-width: 600px) {
+  .promotion_info__item--desc_text {
+    gap: 10px;
+    width: 340px;
+  }
+}
+@media (max-width: 600px) {
+  .promotion_info__item--desc_text {
+    font-size: 14px;
+    line-height: 18.2px;
+  }
+}
+.promotion_info__item--desc_text::before {
+  content: "";
+  display: block;
+  min-width: 20px;
+  height: 2px;
+  background-color: var(--dark-blue);
+}
+@media (max-width: 600px) {
+  .promotion_info__item--desc_text::before {
+    min-width: 15.2px;
   }
 }/*# sourceMappingURL=promotion.css.map */
