--- a/assets/styles/promotion/promotion.scss
+++ b/assets/styles/promotion/promotion.scss
@@ -1,3 +1,4 @@
+/* Акция */
 .main_screen {
     display: grid;
     grid-template-columns: 40% 60%;
@@ -10,10 +11,10 @@
     }
 
     @media (max-width: 1300px) {
-        padding: 0 10px;
+        padding: 0 25px;
     }
 
-    @media (max-width: 1100px) {
+    @media (max-width: 1200px) {
         grid-template-columns: 1fr;
     }
 
@@ -21,7 +22,7 @@
         display: flex;
         flex-direction: column;
 
-        @media (max-width: 1100px) {
+        @media (max-width: 1200px) {
             align-items: center;
             justify-content: center;
         }
@@ -50,7 +51,7 @@
                     display: none;
                 }
 
-                @media (max-width: 1100px) {
+                @media (max-width: 1200px) {
                     text-align: center;
                     flex-direction: column;
                     gap: 0;
@@ -77,7 +78,7 @@
                 display: flex;
                 gap: 5px;
 
-                @media (max-width: 1100px) {
+                @media (max-width: 1200px) {
                     flex-direction: column;
                     text-align: center;
                 }
@@ -94,7 +95,7 @@
             gap: 60px;
             margin-top: 150px;
 
-            @media (max-width: 1100px) {
+            @media (max-width: 1200px) {
                 margin-top: 20px;
                 flex-direction: column;
                 text-align: center;
@@ -106,7 +107,7 @@
                 flex-direction: column;
                 text-align: left;
 
-                @media (max-width: 1100px) {
+                @media (max-width: 1200px) {
                     text-align: center;
                 }
 
@@ -127,7 +128,7 @@
                     font-size: 40px;
                     line-height: 48.76px;
 
-                    @media (max-width: 1100px) {
+                    @media (max-width: 1200px) {
                         justify-content: center;
                     }
                 }
@@ -140,7 +141,7 @@
             gap: 15px;
             text-align: left;
 
-            @media (max-width: 1100px) {
+            @media (max-width: 1200px) {
                 text-align: center;
                 align-items: center;
             }
@@ -189,7 +190,7 @@
         width: 100%;
         height: 500px;
 
-        @media (max-width: 1100px) {
+        @media (max-width: 1200px) {
             display: none;
         }
 
@@ -208,11 +209,11 @@
                 display: none;
             }
 
-            @media (max-width: 1100px) {
+            @media (max-width: 1200px) {
                 display: none;
             }
 
-            @media (max-width: 1100px) {
+            @media (max-width: 1200px) {
                 &--adaptive {
                     display: block;
                     height: 40%;
@@ -226,6 +227,106 @@
 
                     @media (max-width: 400px) {
                         width: 170%;
+                    }
+                }
+            }
+        }
+    }
+}
+
+/* Условия акции */
+.promotion_info {
+    display: grid;
+    grid-template-columns: repeat(3, 30%);
+    padding: 0 200px;
+    color: #000000;
+    margin-top: 50px;
+    margin-bottom: 100px;
+    gap: 20px;
+
+    @media (max-width: 1600px) {
+        padding: 0 100px;
+    }
+
+    @media (max-width: 1500px) {
+        padding: 0 10px;
+    }
+
+    @media (max-width: 1350px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 900px) {
+        grid-template-columns: 1fr;
+    }
+
+    &__item {
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+
+        @media (max-width: 1350px) and (min-width: 900px) {
+            &:last-of-type {
+                grid-column: 1 / 3;
+            }
+        }
+
+        @media (max-width: 1350px) {
+            align-items: center;
+        }
+
+        @media (max-width: 450px) {
+            align-items: flex-start;
+            gap: 15px;
+        }
+
+        &--caption {
+            font-weight: 700;
+            font-size: 40px;
+            line-height: 48.76px;
+            text-align: left;
+
+            @media (max-width: 600px) {
+                font-size: 24px;
+                line-height: 29.26px;
+            }
+        }
+
+        &--desc {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            &_text {
+                display: flex;
+                gap: 15px;
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 20.8px;
+                align-items: center;
+                width: 420px;
+                white-space: wrap;
+                text-align: left;
+
+                @media (max-width: 600px) {
+                    gap: 10px;
+                    width: 340px;
+                }
+
+                @media (max-width: 600px) {
+                    font-size: 14px;
+                    line-height: 18.2px;
+                }
+
+                &::before {
+                    content: "";
+                    display: block;
+                    min-width: 20px;
+                    height: 2px;
+                    background-color: var(--dark-blue);
+
+                    @media (max-width: 600px) {
+                        min-width: 15.2px;
                     }
                 }
             }
