--- a/assets/styles/main_screen/main_screen.css
+++ b/assets/styles/main_screen/main_screen.css
@@ -27,6 +27,11 @@
     margin-top: 50px;
   }
 }
+@media (max-width: 600px) {
+  .main_screen {
+    margin-top: 40px;
+  }
+}
 .main_screen .main_img {
   width: 100%;
   max-height: 100%;
@@ -57,11 +62,6 @@
   font-size: 16px;
   line-height: 19.5px;
   word-spacing: 0px;
-}
-@media (max-width: 500px) {
-  .main_screen .breadcrumbs {
-    left: 3%;
-  }
 }
 .main_screen--caption {
   font-weight: 700;
