--- a/assets/styles/main_screen/main_screen.scss
+++ b/assets/styles/main_screen/main_screen.scss
@@ -25,6 +25,10 @@
         margin-top: 50px;
     }
 
+    @media (max-width: 600px) {
+        margin-top: 40px;
+    }
+
     .main_img {
         width: 100%;
         max-height: 100%;
@@ -53,10 +57,6 @@
             font-size: 16px;
             line-height: 19.5px;
             word-spacing: 0px;
-        }
-
-        @media (max-width: 500px) {
-            left: 3%;
         }
     }
 
